Initial "ImageView" component creation

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,25 @@ button:hover {
     object-fit: cover; 
     border-radius: 16px 16px 0 0;
 }
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .2s ease;
+    background-color: black;
+  }
+
+  #img-container:hover .overlay {
+    opacity: .8;
+  }
+
+  #img-container:hover{
+    cursor: pointer;
+  }
+  
